# research_loop

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml  reproduce.sh
.github/workflows/: ci.yml
examples/: agent_claims.py  autonomous_research_loop.py  research_loop_demo.py
harness/: LICENSE  README.md  pyproject.toml
harness/examples/: demo.py
harness/looplab/: __init__.py
looplab/: __init__.py  core.py  engine.py  models.py
looplab/executors/: __init__.py  python_runner.py  shell.py  slurm.py
method/: engineered-loop.md
pilot/: README.md
pilot/papers/: dlpno-cert.md  expt-rdm.md  metagga-nogo.md
pilot/screening/: kill-map.md
tests/: test_engine.py  test_executors.py  test_looplab.py
