[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "looplab"
version = "0.2.0"
description = "An anti-self-deception harness for AI-accelerated research: preregistered, externally-anchored, audited screening loops."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "anonymous"}]
keywords = ["research-methodology", "ai-for-science", "reproducibility",
            "evaluation", "scientific-discovery", "multi-agent", "provenance"]
dependencies = []

[project.urls]
Homepage = "https://github.com/"

[tool.setuptools.packages.find]
include = ["looplab*"]
